# antigen-v3

./: Cargo.toml  legend-of-r.graphml
crates/antigen_async/: Cargo.toml
crates/antigen_async/src/: lib.rs
crates/antigen_components/: Cargo.toml
crates/antigen_components/src/: label.rs
crates/antigen_crossterm/: Cargo.toml
crates/antigen_crossterm/src/: events.rs  key_events.rs  lib.rs  macros.rs  mouse_events.rs  resize_events.rs
crates/antigen_debug_stdout/: Cargo.toml
crates/antigen_debug_stdout/src/: lib.rs
crates/antigen_egui/: Cargo.toml
crates/antigen_egui/src/: egui_render_pass.rs  egui_user_interface.rs  lib.rs  widgets.rs
crates/antigen_egui/src/shader/: egui_frag.wgsl  egui_vert.wgsl  egui_vert_web.wgsl
crates/antigen_log/: Cargo.toml
crates/antigen_log/src/: lib.rs
crates/antigen_rendering/: Cargo.toml
crates/antigen_rendering/src/: lib.rs
crates/antigen_tracing/: Cargo.toml
crates/antigen_tracing/src/: event.rs  lib.rs  records.rs  trace_root.rs  trace_tree.rs
crates/antigen_tracing/src/layers/: mod.rs  trace_execution.rs  trace_self_time.rs  trace_total_time.rs
crates/antigen_wgpu/: Cargo.toml
crates/antigen_wgpu/src/: lib.rs
crates/antigen_wgpu/src/components/: mod.rs  wgpu_command_buffers.rs  wgpu_device.rs  wgpu_instance.rs  wgpu_queue.rs  wgpu_renderer.rs  wgpu_swap_chain_frame.rs  wgpu_texture_view.rs
crates/antigen_winit/: Cargo.toml
crates/antigen_winit/src/: lib.rs  window.rs
crates/antigen_winit/src/systems/: close_windows.rs  create_windows.rs  event_loop.rs  main_event.rs  mod.rs  redraw.rs  redraw_event.rs  window_event.rs
crates/antigen_winit_wgpu/: Cargo.toml
crates/antigen_winit_wgpu/src/: lib.rs  system.rs  wgpu_swap_chain_frame.rs  winit_swap_chain.rs
crates/deebs/: Cargo.toml
crates/deebs/src/: column.rs  key.rs  lib.rs  singleton.rs  table.rs  view.rs
crates/deebs/src/guards/: mod.rs  read_cell.rs  read_column.rs  read_singleton.rs  read_view.rs  write_cell.rs  write_column.rs  write_singleton.rs
crates/deebs/src/row/: common_keys.rs  insert.rs  map.rs  mod.rs  remove.rs
crates/deebs_macros/: Cargo.toml
crates/deebs_macros/src/: common_keys.rs  insert.rs  lib.rs  map.rs  remove.rs  row.rs  table.rs  widget.rs  widgets.rs
crates/test_program/antigen_test/: Cargo.toml
crates/test_program/antigen_test/src/: main.rs
crates/test_program/database/: Cargo.toml
crates/test_program/database/src/: lib.rs  stdout_debugger.rs
crates/test_program/debugger_egui/: Cargo.toml
crates/test_program/debugger_egui/src/: debugger.rs  lib.rs
crates/test_program/hello_egui/: Cargo.toml
crates/test_program/hello_egui/src/: inspector.rs  lib.rs
crates/test_program/hello_quads/: Cargo.toml
crates/test_program/hello_quads/src/: lib.rs  shader.wgsl
crates/test_program/hello_triangle/: Cargo.toml
crates/test_program/hello_triangle/src/: lib.rs
crates/test_program/integrator/: Cargo.toml
crates/test_program/integrator/src/: lib.rs
crates/test_program/logger_egui/: Cargo.toml
crates/test_program/logger_egui/src/: lib.rs  logger.rs
crates/test_program/tracer_egui/: Cargo.toml
crates/test_program/tracer_egui/src/: lib.rs  tracer.rs
