[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "antigen_crossterm"
version = "0.1.0"

[dependencies]
async-std = "1.9.0"
comfy-table = "2.1.0"
crossterm = "0.19.0"
futures = "0.3.14"

deebs = {path = "../deebs"}

tracing = {version = "0.1.26", optional = true}
