[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "antigen_debug_stdout"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antigen_crossterm = {path = "../antigen_crossterm"}
async-std = "1.9.0"
async-trait = "0.1.50"
comfy-table = "2.1.0"
futures = " 0.3.15"

deebs = {path = "../deebs"}

tracing = {version = "0.1.26", optional = true}
