[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "antigen_egui"
version = "0.1.0"

[features]
default = ["clipboard", "webbrowser"]

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
bytemuck = "1.5.1"
egui = {version = "0.12.0", features = ["multi_threaded"]}
futures = "0.3.14"

antigen_rendering = {path = "../antigen_rendering"}
antigen_wgpu = {path = "../antigen_wgpu"}
antigen_winit = {path = "../antigen_winit"}
deebs = {path = "../deebs"}

clipboard = {version = "0.5.0", optional = true}
webbrowser = {version = "0.5.5", optional = true}
tracing = {version = "0.1.26", optional = true}
