[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "antigen_tracing"
version = "0.1.0"

[features]
default = ["egui"]

[dependencies]
async-std = "1.9.0"
env_logger = "0.8.3"
tracing = "0.1.26"
log = "0.4.14"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.18"

deebs = {path = "../deebs"}

egui = {version = "0.12.0", optional = true}
