[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "deebs"
version = "0.1.0"

[dependencies]
async-std = {version = "1.9.0"}
async-trait = "0.1.50"
futures = "0.3.14"
fnv = "1.0.7"

tracing = {version = "0.1.26", optional = true}

lazy_static = "1.4.0"

deebs_macros = {path = "../deebs_macros"}
