[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "database"
version = "0.1.0"

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
egui = "0.12.0"
futures = "0.3.15"

borrow_derive = {path = "../../borrow_derive"}
deebs = {path = "../../deebs"}

antigen_components = {path = "../../antigen_components"}
antigen_crossterm = {path = "../../antigen_crossterm"}
antigen_debug_stdout = {path = "../../antigen_debug_stdout"}
antigen_egui = {path = "../../antigen_egui"}
antigen_log = {path = "../../antigen_log"}
antigen_rendering = {path = "../../antigen_rendering"}
antigen_tracing = {path = "../../antigen_tracing"}
antigen_wgpu = {path = "../../antigen_wgpu"}
antigen_winit = {path = "../../antigen_winit"}
antigen_winit_wgpu = {path = "../../antigen_winit_wgpu"}

hello_egui = {path = "../hello_egui"}
hello_quads = {path = "../hello_quads"}
hello_triangle = {path = "../hello_triangle"}
integrator = {path = "../integrator"}

tracing = {version = "0.1.26", optional = true}
