[package]
authors = ["Josh Palmer <jpalmerwatkins@gmail.com>"]
edition = "2018"
name = "integrator"
version = "0.1.0"

[dependencies]
egui = "0.12.0"
async-std = "1.9.0"
async-trait = "0.1.50"
futures = "0.3.15"

deebs = {path = "../../deebs"}
antigen_components = {path = "../../antigen_components"}

tracing = {version = "0.1.26", optional = true}
